Perma [Tier 2] toolkit/components/ml/tests/browser/browser_ml_engine_perf.js / browser_ml_engine_multi_perf.js | Test timed out -
Categories
(Core :: Machine Learning, defect, P5)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr128 | --- | unaffected |
firefox132 | --- | unaffected |
firefox133 | --- | unaffected |
firefox134 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: nika)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: intermittent-failure, regression)
Attachments
(1 file)
Filed by: smolnar [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=483575003&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/PLpARRN-QsW2JwRrYOf2yw/runs/0/artifacts/public/logs/live_backing.log
Failed to retrieve MOZ_UPLOAD_DIR env var
[task 2024-11-21T02:35:01.342Z] TEST-UNEXPECTED-FAIL | toolkit/components/ml/tests/browser/browser_ml_engine_perf.js | Test timed out -
[task 2024-11-21T02:35:01.342Z] GECKO(3069) | Completed ShutdownLeaks collections in process 3069
[task 2024-11-21T02:35:01.342Z] TEST-START | Shutdown
[task 2024-11-21T02:35:01.342Z] Browser Chrome Test Summary
[task 2024-11-21T02:35:01.342Z] Passed: 0
[task 2024-11-21T02:35:01.342Z] Failed: 1
[task 2024-11-21T02:35:01.342Z] Todo: 0
[task 2024-11-21T02:35:01.342Z] Mode: e10s
[task 2024-11-21T02:35:01.342Z] *** End BrowserChrome Test Results ***
[task 2024-11-21T02:35:01.342Z] GECKO(3069) | Exiting due to channel error.
[task 2024-11-21T02:35:01.342Z] GECKO(3069) | Exiting due to channel error.
[task 2024-11-21T02:35:01.342Z] GECKO(3069) | Exiting due to channel error.
[task 2024-11-21T02:35:01.342Z] GECKO(3069) | Exiting due to channel error.
[task 2024-11-21T02:35:01.342Z] GECKO(3069) | Exiting due to channel error.
[task 2024-11-21T02:35:01.342Z] GECKO(3069) | Exiting due to channel error.
[task 2024-11-21T02:35:01.342Z] GECKO(3069) | Exiting due to channel error.
[task 2024-11-21T02:35:01.342Z] GECKO(3069) | Exiting due to channel error.
[task 2024-11-21T02:35:01.342Z] TEST-INFO | Main app process: exit 0
[task 2024-11-21T02:35:01.342Z] runtests.py | Application ran for: 1:32:27.145669
[task 2024-11-21T02:35:01.342Z] zombiecheck | Reading PID log: /tmp/tmp50m5h375pidlog
[task 2024-11-21T02:35:01.342Z] ==> process 3069 launched child process 3143
[task 2024-11-21T02:35:01.342Z] zombiecheck | Checking for orphan process with PID: 3143
[task 2024-11-21T02:35:01.342Z] Stopping web server
[task 2024-11-21T02:35:01.342Z] Server shut down.
[task 2024-11-21T02:35:01.342Z] Web server killed.
[task 2024-11-21T02:35:01.342Z] Stopping web socket server
[task 2024-11-21T02:35:01.342Z] Stopping ssltunnel
[task 2024-11-21T02:35:01.342Z] leakcheck | refcount logging is off, so leaks can't be detected!
[task 2024-11-21T02:35:01.342Z] runtests.py | Running tests: end.
[task 2024-11-21T02:35:01.342Z] Buffered messages finished
[task 2024-11-21T02:35:01.342Z] TEST-INFO | checking window state
[task 2024-11-21T02:35:01.342Z] Browser Chrome Test Summary
[task 2024-11-21T02:35:01.342Z] Passed: 0
[task 2024-11-21T02:35:01.342Z] Failed: 1
[task 2024-11-21T02:35:01.342Z] Todo: 0
[task 2024-11-21T02:35:01.342Z] Mode: e10s
[task 2024-11-21T02:35:01.342Z] *** End BrowserChrome Test Results ***
[task 2024-11-21T02:35:01.342Z] Buffered messages finished
[task 2024-11-21T02:35:01.342Z] SUITE-END | took 5547s
[task 2024-11-21T02:35:01.342Z] Traceback (most recent call last):
[task 2024-11-21T02:35:01.342Z] File "python/mozperftest/mozperftest/runner.py", line 299, in <module>
[task 2024-11-21T02:35:01.342Z] sys.exit(main())
[task 2024-11-21T02:35:01.342Z] File "python/mozperftest/mozperftest/runner.py", line 295, in main
[task 2024-11-21T02:35:01.342Z] run_tests(mach_cmd, args, user_args)
[task 2024-11-21T02:35:01.342Z] File "python/mozperftest/mozperftest/runner.py", line 188, in run_tests
[task 2024-11-21T02:35:01.342Z] e.run(metadata)
[task 2024-11-21T02:35:01.342Z] File "/home/cltbld/tasks/task_173215089223890/fetches/python/mozperftest/mozperftest/environment.py", line 92, in run
[task 2024-11-21T02:35:01.342Z] metadata = testlayer(syslayer(metadata))
[task 2024-11-21T02:35:01.343Z] File "/home/cltbld/tasks/task_173215089223890/fetches/python/mozperftest/mozperftest/layers.py", line 157, in __call__
[task 2024-11-21T02:35:01.343Z] metadata = layer(metadata)
[task 2024-11-21T02:35:01.343Z] File "/home/cltbld/tasks/task_173215089223890/fetches/python/mozperftest/mozperftest/layers.py", line 69, in __call__
[task 2024-11-21T02:35:01.343Z] metadata = self.run(metadata)
[task 2024-11-21T02:35:01.343Z] File "/home/cltbld/tasks/task_173215089223890/fetches/python/mozperftest/mozperftest/test/mochitest.py", line 192, in run
[task 2024-11-21T02:35:01.343Z] raise MochitestTestFailure("Test failed to run")
[task 2024-11-21T02:35:01.343Z] mozperftest.test.mochitest.MochitestTestFailure: Test failed to run
[taskcluster 2024-11-21T02:35:01.605Z] Exit Code: 1
[taskcluster 2024-11-21T02:35:01.605Z] User Time: 1m14.809131s
[taskcluster 2024-11-21T02:35:01.605Z] Kernel Time: 13.102827s
[taskcluster 2024-11-21T02:35:01.605Z] Wall Time: 1h33m28.057132158s
[taskcluster 2024-11-21T02:35:01.605Z] Result: FAILED
[taskcluster 2024-11-21T02:35:01.605Z] === Task Finished ===
[taskcluster 2024-11-21T02:35:01.605Z] Task Duration: 1h33m28.060534262s
[taskcluster 2024-11-21T02:35:01.673Z] Uploading link artifact public/logs/live.log to artifact public/logs/live_backing.log with expiry 2025-11-21T00:49:20.485Z
[taskcluster:error] exit status 1
Updated•12 days ago
|
Comment 1•12 days ago
|
||
Set release status flags based on info from the regressing bug 1932221
Comment 2•11 days ago
|
||
probably the same issue in Bug 1932613
Comment 3•11 days ago
|
||
This test TEST-UNEXPECTED-FAIL | toolkit/components/ml/tests/browser/browser_ml_engine_multi_perf.js | Test timed out -
is also perma failing.
Comment hidden (Intermittent Failures Robot) |
Assignee | ||
Comment 5•10 days ago
|
||
This is not the most elegant solution, but should work as well as the
previous setup.
Updated•10 days ago
|
Assignee | ||
Updated•10 days ago
|
Comment 7•10 days ago
|
||
Linking this to the ML Yelp metabug just for future reference, since this fixes a hang in engine creation that affected Yelp over the past couple days. Thanks Nika!
Comment hidden (Intermittent Failures Robot) |
Comment 9•10 days ago
|
||
bugherder |
Comment hidden (Intermittent Failures Robot) |
Description
•