Bug 1932535 - Allow shared memory access to propagate into nested non-chrome workers, r=dom-worker-reviewers,asuth

This is not the most elegant solution, but should work as well as the
previous setup.

Differential Revision: https://phabricator.services.mozilla.com/D229969